--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,3 +8,30 @@ nav a {
     display: block;
     padding: 20px;
 }
+main{
+    max-width: 840px;
+}
+
+aside{
+    width: 500px;
+    margin: 50px;
+    border: 10px solid rgb(102, 101, 101);
+    padding: 10px;
+    background-color: rgb(196, 195, 195);
+    color: black;
+}
+
+main img {
+    width: 200px;
+    height: auto;
+}
+
+p{
+    padding: 0;
+}
+
+footer{
+    margin-top: 20px;
+    border-top: 1px solid black;
+    text-align: center;
+}
