--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,14 @@ nav a {
 h1{
     color:rgb(70, 70, 70)
 }
+
+main img {
+    width: 150px;
+    height: auto;
+    border: 1px solid gray;
+    padding: 2px;
+    box-shadow: 15px 10px 30px rgb(0, 0, 0);
+}
 main{
     max-width: 840px;
 }
