--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,7 +25,7 @@ nav a {
 }
 
 h1{
-    color:rgb(70, 70, 70)
+    color:rgb(70, 70, 70);
     padding: .5rem
 }
 
@@ -36,8 +36,9 @@ main img {
     padding: 2px;
     box-shadow: 0 0 30px gray;
     float: right;
-    marin: 0 0 1rem 1rem;
+    margin: 0 0 1rem 1rem;
 }
+
 p {
     margin: 1rem;
 }
