--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,24 +9,36 @@ body{
     font-family: Roboto, Arial, sans-serif;
 }
 
+header, .grid, footer {
+  max-width: 840px;
+  margin: 0 auto;
+}
+
 :root {
     --img-height: auto;
 }
 
 nav {
     background-color: darkblue;
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
-    color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700%;
+    color: #fff;
 }
 
 h1{
     color:rgb(70, 70, 70);
-    padding: .5rem
+    padding: .5rem;
+    border-bottom: 2px solid black;
 }
 
 main img {
@@ -44,18 +56,21 @@ p {
 }
 
 main{
-    max-width: 840px;
+    grid-column: 2 / 3;
+    margin: 1rem;
 }
 
 aside{
-    width: 500px;
+    width: 20rem;
+    position: relative;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
     margin: 50px;
     border: 5px solid rgb(102, 101, 101);
     padding: 10px;
     background-color: rgb(196, 195, 195);
     color: black;
     text-align: center;
-    position: relative;
 }
 
 aside img {
@@ -65,8 +80,8 @@ aside img {
 
 aside h2{
     position: absolute;
-    top: 45px;
-    left: 350px;
+    top: 305px;
+    left: 20px;
 }
 
 p{
@@ -77,6 +92,12 @@ footer{
     margin-top: 20px;
     border-top: 1px solid black;
     text-align: center;
+}
+
+.grid {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 20rem 1fr;
 }
 
 /* Class Selectors */
