--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -15,7 +15,12 @@
 header {
     background-color: var(--primary-color);
     color: var(--accent2-color);
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    align-items: center;
+    padding: 10px 0;
 }
+
 body {
     font-family: var(--body-font);
     color: var(--accent1-color);
@@ -31,9 +36,63 @@ h1, h2 {
     color: var(--secondary-color)
 }
 
-nav, p, article {
+nav{
+    display: flex;
+    gap: 1rem;
+    justify-content: center; 
+}
+
+.buttons a{
+    text-decoration: none;
+    font-weight: bold;
+    padding: 8px 12px;
+    border: 2px solid lightgray;
+    border-radius: 6px;
+}
+
+.adventures h2 {
+    text-align: center;
+}
+
+.adventurepics {
+    border: 3px solid black;
+    padding: 1rem;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    text-align: center;
+}
+
+.adventures figure {
+    width: 150px;
+}
+
+.adventures figcaption {
+    margin-top: 0.5rem;
+    font-size: 0.9rem;
+}
+
+.adventures img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
+
+p, article {
     margin: 16px;
     padding: 8px
+}
+
+.history {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem;
+}
+.history img{
+    width: 250px;
 }
 
 .socialmedia a {
@@ -60,6 +119,11 @@ nav, p, article {
     background-color: var(--accent2-color);
     opacity: 0.7;
     color: #fff; /* white text - make sure there is enough contrast with the background color */
+}
+
+footer {
+    display: flex;
+    justify-content: end;
 }
 
 .hero img {
